# wardrobe-stylist

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend.yml  ios.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  extractor.py  stylist.py
backend/app/routes/: __init__.py  extract.py  recommend.py
backend/app/schemas/: __init__.py  purchase.py  recommendation.py
backend/tests/: conftest.py  test_extract.py  test_health.py  test_outfit_schema.py  test_purchase_schema.py  test_recommend.py
docs/: architecture.md  google-setup.md  privacy.md  setup.md
ios/: Config.xcconfig  Secrets.xcconfig.example  project.yml
ios/Wardrobe/: ContentView.swift  Info.plist  WardrobeApp.swift
ios/Wardrobe/Backend/: BackendConfig.swift  ExtractAPI.swift  ExtractClient.swift  RecommendAPI.swift  RecommendClient.swift
ios/Wardrobe/Capture/: AddItemView.swift  CameraPicker.swift  ImageProcessor.swift
ios/Wardrobe/Gmail/: Base64URL.swift  GmailAuth.swift  GmailModels.swift  GmailReadEndpoint.swift  GmailReadOnlyClient.swift  GmailScope.swift  GmailSession.swift  GmailTransport.swift  GoogleSignInGmailAuth.swift  MessageWalker.swift  TokenStorage.swift
ios/Wardrobe/Models/: Item.swift  Outfit.swift  WearLog.swift
ios/Wardrobe/Pipeline/: ReceiptPipeline.swift
ios/Wardrobe/Receipts/: AttachmentOCR.swift  CandidateClassifier.swift  HTMLStripper.swift  JSONLDExtractor.swift  OCREngine.swift  RetailerDirectory.swift  SignalsExtractor.swift
ios/Wardrobe/Stylist/: CatalogCompactor.swift  OutfitRecommender.swift  WearHistory.swift
ios/Wardrobe/Views/: CatalogOrganizer.swift  CatalogView.swift  ItemDetailView.swift  (+1 more)
ios/WardrobeTests/: CatalogOrganizerTests.swift  GmailReadOnlyGuardTests.swift  SmokeTests.swift
shared/schemas/: README.md  outfit.schema.json  purchase.schema.json
(+24 files in other folders)
