[project]
name = "wardrobe-backend"
version = "0.1.0"
description = "FastAPI proxy that holds the Anthropic key and calls Claude for the Wardrobe Stylist app."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "pydantic-settings>=2.5",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's idiomatic dependency injection uses `Depends(...)` in argument defaults — that's
# not the bug B008 was written to catch.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

# The Claude system prompt reads as prose; one rule per line beats wrapping.
[tool.ruff.lint.per-file-ignores]
"app/agents/extractor.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
